# pandas_ext

./: .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  requirements-test.txt  requirements.txt  setup.cfg  setup.py  test_requirements.txt
pandas_ext/: __init__.py  _csv.py  _xml.py  amazon_spectrum.py  csv.py  excel.py  gdrive.py  json.py  parquet.py  sfdc.py  snowflake.py  sql.py  sqla_utils.py  xml.py
pandas_ext/common/: utils.py
requirements/: requirements.in
tests/: __init__.py  test_amazon_spectrum.py  test_csv.py  test_gdrive.py  test_parquet.py  test_snowflake.py  test_sqla_utils.py
