[tool:pytest]
norecursedirs = venv
testpaths = tests
addopts =
    -n2
    --cov
    --cov-report term-missing
    --cov-report term:skip-covered
cov-config = .coveragerc
	
[flake8]
exclude = venv/*,*.ropeproject/*

[coverage:run]
omit =
    venv/*
    */.pyenv/*
branch = True

[metadata]
description-file = README.md
